fix: update page title and version etc

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nuxt-templates",
-  "version": "1.0.0",
+  "name": "gonuxt",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "nuxt",
