--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "gonuxt",
-  "version": "0.2.0",
+  "version": "0.4.0",
   "private": true,
   "scripts": {
     "dev": "nuxt",
     "build": "DEPLOY_ENV=GH_PAGES nuxt build",
     "start": "nuxt start",
     "generate": "DEPLOY_ENV=GH_PAGES nuxt generate",
+    "generate-win": "SET DEPLOY_ENV=GH_PAGES && nuxt generate",
     "deploy": "gh-pages -d dist -t",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint:style": "stylelint \"**/*.{css,scss,sass,html,vue}\" --ignore-path .gitignore",
